[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sakharov98 <msaharov669@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"},  { include = "brain_games" }]


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
